Wed Feb 12 12:26:01 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_utils.adb: Fix bug in Is_Relative_Dir with No_Name.
	Try to suppress '/' occurrences to futur port to Windows.

	* xe_stubs.adb: Fix bug that occurs when building executable file
 	name with No_Storage_Dir. String "../../.." appended twice.

	* xe_check.adb, xe_util.adb: Clean error message. Use
 	All_Lower_Case in Write_Unit_Name.

	* xe.ads: Minor reformatting.

	* xe_back.adb: Reorganize code (alphabetical order).

Tue Feb 11 16:27:04 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_check.adb: Do not try to recompile internal units. This code
 	was taken from an old version of gnatmake.

Tue Feb 11 11:38:48 1997  Laurent Pautet  <pautet@lglsun2.epfl.ch>

	* xe.adb, xe_stubs.adb: Use of Write_Missing_File.

Mon Feb 10 21:10:20 1997  Laurent Pautet  <pautet@lglsun2.epfl.ch>

	* xe_stubs.adb: Reorganize code (alphabetical order) and change
 	some parameter names.

	* xe_stubs.adb: Use the two new procedures of XE.

	* xe_stubs.adb: Improve recompilation and time stamp
 	operations. Fix a bug as well. Now, Mark_RCI_Callers has a new
 	capability which allows to compute the most recent ali file in the
 	partition sub-tree.

	* xe_check.adb: Add some debugging messages.

	* xe_utils.ads, xe_utils.adb: Reorganize code (alphabetical order)
 	and change some parameter names.

	* xe_utils.ads, xe_utils.adb : Add two new procedures :
 	Write_Stamp_Comparison and Write_Missing_File (Debugging messages).

	* xe.ads, xe.adb, xe_parse.adb: Add a new configuration language
 	type : Channel.

	* xe.ads, xe.adb: Add a new procedure Get_Partition_Dir which
 	returns the directory where all the partition sources are stored.

	* xe.ads, xe.adb: Add a new field in Partition_Type : Most_Recent
 	which denotes the most recent file of a partition. 

	* xe.ads, xe.adb: Add a new procedure Update_Partition_Stamp to
 	have more informations to decide when to rebuild a partition. Get