@@ -1,3 +1,9 @@
+Thu Feb 13 11:42:17 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* xe.adb: Recognize '/' as well as the system's default separator.
+
+	* xe_utils.adb: Ditto.
+
 Wed Feb 12 12:26:01 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
 
 	* xe_utils.adb: Fix bug in Is_Relative_Dir with No_Name.
